Navbar megoldása profile.html-ban

--- a/dashboard.html
+++ b/dashboard.html
@@ -63,7 +63,7 @@
                     </div>
 
                     <!-- A felhasználó által követett felhasználók legfrisebb "kiposztolt" ötletei -->
-                    <span class="topLgMargin bottomLgMargin header">Recent posts by followed users</span>
+                    <span class="header recentSpan">Recent posts by followed users</span>
 
                     <div class="recommendationDivs">
                         <div class="recommendedUser">
