--- a/profile.html
+++ b/profile.html
@@ -11,23 +11,20 @@
     <script src="js/text-area.js"></script>
 </head>
 <body>
-    <div class="top-left"></div>
-    <div class="top">
-        <h1>EchoMap</h1>
-    </div>
-    <div class="left">
+    <nav>
         <div class="left-icons">
-            <a href="dashboard.html" target="_blank" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="Icons/Black Navbar Icons/home.svg" alt="Home icon" class="theme-icon"></span></a>
-            <a href="profile.html" target="_blank" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="Icons/Black Navbar Icons/person.svg" alt="Person icon" class="theme-icon"></span></a>
+            <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="Icons/Black Navbar Icons/home.svg" alt="Home icon" class="theme-icon"></span></a>
+            <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="Icons/Black Navbar Icons/person.svg" alt="Person icon" class="theme-icon"></span></a>
+            <h1>EchoMap</h1>
+            <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search"><img src="Icons/Black Navbar Icons/search.svg" alt="Search icon" class="theme-icon"></span></a>
             <span class="material-symbols-outlined" data-tooltip="Dark Mode" onclick="toggleTheme()">
                 <img src="Icons/Black Navbar Icons/theme.svg" alt="Theme Toggle" class="theme-icon">
             </span>
             <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="Icons/Black Navbar Icons/logout.svg" alt="Logout icon" class="theme-icon"></span>
         </div>
-    </div>
+    </nav>
     <div class="main">
         <div class="profileInformation">
-
             <div class="segitseg">
 
                 <div class="userProfile">   
@@ -187,6 +184,7 @@
                     </div>
                 </div>
         </div>
-        <script src="js/profileChange.js"></script>
+    </div>
+    <script src="js/profileChange.js"></script>
 </body>
 </html>
