Dark-Light mode javascript módosítása, mappa struktúra módosítása

--- a/comment.html
+++ b/comment.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/light-mode css/light-mode comment.css" id="theme">
+    <link rel="stylesheet" href="css/light/comments.css" type="text/css" id="theme">
     <link rel="shortcut icon" href="output-onlinepngtools.png" type="image/x-icon">
-    <script src="js/commentsChange.js"></script>
-    <script src="js/searchOpen.js"></script>
+    <script src="javascript/themeChange.js"></script>
+    <script src="javascript/searchOpen.js"></script>
     <title>Comment</title>
 </head>
 <body>
     <nav>
         <div class="left-icons">
-            <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="Icons/Black Navbar Icons/home.svg" alt="Home icon" class="theme-icon"></span></a>
-            <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="Icons/Black Navbar Icons/person.svg" alt="Person icon" class="theme-icon"></span></a>
+            <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="imgs/black/home.svg" alt="Home icon" class="theme-icon"></span></a>
+            <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="imgs/black/person.svg" alt="Person icon" class="theme-icon"></span></a>
             <h1 id="navSpan">EchoMap</h1>
-            <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search" onclick="searchOpenBttn()"><img src="Icons/Black Navbar Icons/search.svg" alt="Search icon" class="theme-icon"></span></a>
+            <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search" onclick="searchOpenBttn()"><img src="imgs/black/search.svg" alt="Search icon" class="theme-icon"></span></a>
             <span class="material-symbols-outlined" data-tooltip="Dark Mode" onclick="toggleTheme()">
-                <img src="Icons/Black Navbar Icons/theme.svg" alt="Theme Toggle" class="theme-icon">
+                <img src="imgs/black/theme.svg" alt="Theme Toggle" class="theme-icon">
             </span>
-            <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="Icons/Black Navbar Icons/logout.svg" alt="Logout icon" class="theme-icon"></span>
+            <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="imgs/black/logout.svg" alt="Logout icon" class="theme-icon"></span>
         </div>
     </nav>
     <div id="SearchDiv">
         <div class="navSearchBar">
             <input placeholder="Search..." class="input" name="text" type="text">
             <button class="button">
-                <img src="Icons/Black Navbar Icons/search.svg" alt="Search" class="theme-icon">
+                <img src="imgs/black/search.svg" alt="Search" class="theme-icon">
             </button>
         </div> 
     </div>  
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                             <span class="material-symbols-outlined more-icon" class="options">
-                                <img src="Icons/Black Navbar Icons/more.svg" alt="More icon" class="theme-icon Options">
+                                <img src="imgs/black/more.svg" alt="More icon" class="theme-icon Options">
                             </span>
                         </div>
     
@@ -84,10 +84,6 @@
                             </label>
                                 <span>648</span>
                             </div>
-                            <div class="commentInformation">
-                                <img src="Icons/Black Navbar Icons/forum.svg" alt="" class="theme-icon">
-                                <span>999</span>
-                            </div>
                         </div>
                 </div>
                 <hr>
@@ -104,7 +100,7 @@
                                 </div>
                             </div>
                             <span class="material-symbols-outlined more-icon" class="options">
-                                <img src="Icons/Black Navbar Icons/more.svg" alt="More icon" class="theme-icon Options">
+                                <img src="imgs/black/more.svg" alt="More icon" class="theme-icon Options">
                             </span>
                         </div>
                         <div class="text">
@@ -119,7 +115,7 @@
                 <div class="searchBar">
                     <input placeholder="Search..." class="input" name="text" type="text">
                     <button class="button">
-                        <img src="Icons/Black Navbar Icons/search.svg" alt="Search" class="theme-icon">
+                        <img src="imgs/black/search.svg" alt="Search" class="theme-icon">
                     </button>
                 </div>
             </div>
