--- a/dashboard.html
+++ b/dashboard.html
@@ -4,31 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed</title>
-    <link rel="stylesheet" href="css/light-mode css/light-mode home.css" type="text/css" id="theme-home">
-    <link rel="stylesheet" href="css/light-mode css/light-mode phonehome.css">
+    <link rel="stylesheet" href="css/light/dashboard.css" type="text/css" id="theme">
+    <link rel="stylesheet" href="css/light/phone-dashboard.css">
     <link rel="shortcut icon" href="output-onlinepngtools.png" type="image/x-icon">
-    <script src="js/toggleComments.js"></script>
-    <script src="js/homeChange.js"></script>
-    <script src="js/searchOpen.js"></script>
+    <script src="javascript/themeChange.js"></script>
+    <script src="javascript/searchOpen.js"></script>
 </head>
 <body>
     <nav>
         <div class="left-icons">
-            <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="Icons/Black Navbar Icons/home.svg" alt="Home icon" class="theme-icon"></span></a>
-            <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="Icons/Black Navbar Icons/person.svg" alt="Person icon" class="theme-icon"></span></a>
+            <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="imgs/black/home.svg" alt="Home icon" class="theme-icon"></span></a>
+            <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="imgs/black/person.svg" alt="Person icon" class="theme-icon"></span></a>
             <h1 id="navSpan">EchoMap</h1>
-            <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search" onclick="searchOpenBttn()"><img src="Icons/Black Navbar Icons/search.svg" alt="Search icon" class="theme-icon"></span></a>
+            <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search" onclick="searchOpenBttn()"><img src="imgs/black/search.svg" alt="Search icon" class="theme-icon"></span></a>
             <span class="material-symbols-outlined" data-tooltip="Dark Mode" onclick="toggleTheme()">
-                <img src="Icons/Black Navbar Icons/theme.svg" alt="Theme Toggle" class="theme-icon">
+                <img src="imgs/black/theme.svg" alt="Theme Toggle" class="theme-icon">
             </span>
-            <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="Icons/Black Navbar Icons/logout.svg" alt="Logout icon" class="theme-icon"></span>
+            <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="imgs/black/logout.svg" alt="Logout icon" class="theme-icon"></span>
         </div>
     </nav>
     <div id="SearchDiv">
         <div class="navSearchBar">
             <input placeholder="Search..." class="input" name="text" type="text">
             <button class="button">
-                <img src="Icons/Black Navbar Icons/search.svg" alt="Search" class="theme-icon">
+                <img src="imgs/black/search.svg" alt="Search" class="theme-icon">
             </button>
         </div> 
     </div>  
@@ -41,7 +40,7 @@
                     <div class="searchBar">
                         <input placeholder="Search..." class="input" name="text" type="text">
                         <button class="button">
-                            <img src="Icons/Black Navbar Icons/search.svg" alt="Search" class="theme-icon">
+                            <img src="imgs/black/search.svg" alt="Search" class="theme-icon">
                         </button>
                     </div>                
 
@@ -100,7 +99,7 @@
                             </div>
                             <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                             <span class="material-symbols-outlined more-icon">
-                                <img src="Icons/Black Navbar Icons/more.svg" alt="More icon" class="theme-icon">
+                                <img src="imgs/black/more.svg" alt="More icon" class="theme-icon">
                             </span>
                         </div>
 
@@ -135,7 +134,7 @@
                                 <span>-count-</span>
                             </div>
                             <div class="commentInformation" style="display: flex; align-items: center; gap: 5px;">
-                                <img src="Icons/Black Navbar Icons/forum.svg " alt="" class="theme-icon">
+                                <img src="imgs/black/forum.svg" alt="" class="theme-icon">
                                 <span>-count-</span>
                             </div>
                         </div>
@@ -154,7 +153,7 @@
                             </div>
                             <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                             <span class="material-symbols-outlined more-icon">
-                                <img src="Icons/Black Navbar Icons/more.svg" alt="More icon" class="theme-icon">
+                                <img src="imgs/black/more.svg" alt="More icon" class="theme-icon">
                             </span>
                         </div>
 
@@ -189,7 +188,7 @@
                                 <span>-count-</span>
                             </div>
                             <div class="commentInformation" style="display: flex; align-items: center; gap: 5px;">
-                                <img src="Icons/Black Navbar Icons/forum.svg " alt="" class="theme-icon">
+                                <img src="imgs/black/forum.svg" alt="" class="theme-icon">
                                 <span>-count-</span>
                             </div>
                         </div>
