--- a/profile.html
+++ b/profile.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
-    <link rel="stylesheet" href="css/light-mode css/light-mode profile.css" type="text/css" id="theme">
+    <link rel="stylesheet" href="css/light/profile.css" type="text/css" id="theme">
     <link rel="icon" type="image/x-icon" href="output-onlinepngtools.png">
     <script src="js/responsive.js"></script>
-    <script src="js/toggleComments.js"></script>
+    <script src="javascript/themeChange.js"></script>
     <script src="js/text-area.js"></script>
 </head>
 <body>
     <nav>
         <div class="left-icons">
-            <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="Icons/Black Navbar Icons/home.svg" alt="Home icon" class="theme-icon"></span></a>
-            <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="Icons/Black Navbar Icons/person.svg" alt="Person icon" class="theme-icon"></span></a>
-            <h1>EchoMap</h1>
-            <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search"><img src="Icons/Black Navbar Icons/search.svg" alt="Search icon" class="theme-icon"></span></a>
+            <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="imgs/black/home.svg" alt="Home icon" class="theme-icon"></span></a>
+            <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="imgs/black/person.svg" alt="Person icon" class="theme-icon"></span></a>
+            <h1 id="navSpan">EchoMap</h1>
+            <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search" onclick="searchOpenBttn()"><img src="imgs/black/search.svg" alt="Search icon" class="theme-icon"></span></a>
             <span class="material-symbols-outlined" data-tooltip="Dark Mode" onclick="toggleTheme()">
-                <img src="Icons/Black Navbar Icons/theme.svg" alt="Theme Toggle" class="theme-icon">
+                <img src="imgs/black/theme.svg" alt="Theme Toggle" class="theme-icon">
             </span>
-            <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="Icons/Black Navbar Icons/logout.svg" alt="Logout icon" class="theme-icon"></span>
+            <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="imgs/black/logout.svg" alt="Logout icon" class="theme-icon"></span>
         </div>
     </nav>
     <div class="main">
@@ -32,18 +32,18 @@
                     <div class="profilePicture"></div>
                     <div class="leftInformation">
                         <div class="informationCenter">
-                            <img src="Icons/Black Navbar Icons/lightbulb.svg" alt="" class="theme-icon"><span>10</span>
+                            <img src="imgs/black/lightbulb.svg" alt="" class="theme-icon"><span>10</span>
                         </div>
                         <div class="informationCenter">
-                            <img src="Icons/Black Navbar Icons/person.svg" alt="" class="theme-icon"><span>10</span>
+                            <img src="imgs/black/person.svg" alt="" class="theme-icon"><span>10</span>
                         </div>
                     </div>
                     <div class="rightInformation">
                         <div class="informationCenter">
-                            <img src="Icons/Black Navbar Icons/favorite.svg" alt="" class="theme-icon"><span>10</span>
+                            <img src="imgs/black/favorite.svg" alt="" class="theme-icon"><span>10</span>
                         </div>
                         <div class="informationCenter">
-                            <img src="Icons/Black Navbar Icons/comment.svg" alt="" class="theme-icon"><span>10</span>
+                            <img src="imgs/black/comment.svg" alt="" class="theme-icon"><span>10</span>
                         </div>
                     </div>
                     <div class="middleInformation">
@@ -64,7 +64,7 @@
                         </div>
                         <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                         <span class="material-symbols-outlined more-icon" class="postOptions">
-                            <img src="Icons/Black Navbar Icons/more.svg" alt="More icon" class="theme-icon postOptions">
+                            <img src="imgs/black/more.svg" alt="More icon" class="theme-icon postOptions">
                         </span>
                     </div>
 
@@ -103,7 +103,7 @@
                             <span>648</span>
                         </div>
                         <div class="commentInformation">
-                            <img src="Icons/Black Navbar Icons/forum.svg" alt="" class="theme-icon">
+                            <img src="imgs/black/comment.svg" alt="" class="theme-icon">
                             <span>999</span>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                 <div class="searchBar">
                     <input placeholder="Search..." class="input" name="text" type="text">
                     <button class="button">
-                        <img src="Icons/Black Navbar Icons/search.svg" alt="Search" class="theme-icon">
+                        <img src="imgs/black/search.svg" alt="Search" class="theme-icon">
                     </button>
                 </div>
 
