fixed some responsibility issues

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,16 +53,16 @@
                         <div class="recommendedUser">
                             <div class="userProfilePicture"></div>
                             <div class="usernames">
-                                <p>teszt teszt teszt </p>
-                                <span>@WhySoSerious</span>
+                                <p>teszt teszt teszt</p>
+                                <span>@teszt</span>
                             </div>
                             <button>Follow</button>
                         </div>
                         <div class="recommendedUser">
                             <div class="userProfilePicture"></div>
                             <div class="usernames">
-                                <p>Refka Bence</p>
-                                <span>@WhySoSerious</span>
+                                <p>RB</p>
+                                <span>@teszt</span>
                             </div>
                             <button>Follow</button>
                         </div>
@@ -93,8 +93,8 @@
                             <div class="profilePicture"></div>
                             <!-- Felhasználónév -->
                             <div class="usernames">
-                                <span class="birthName">@WhySoSerious</span>
-                                <span class="username">oogabooga</span>
+                                <span class="birthName">tesztnev</span>
+                                <span class="username">teszt</span>
                             </div>
                             <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                             <span class="material-symbols-outlined more-icon">
@@ -147,8 +147,8 @@
                             <div class="profilePicture"></div>
                             <!-- Felhasználónév -->
                             <div class="usernames">
-                                <span class="birthName">@WhySoSerious</span>
-                                <span class="username">oogabooga</span>
+                                <span class="birthName">tesztnev</span>
+                                <span class="username">teszt</span>
                             </div>
                             <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                             <span class="material-symbols-outlined more-icon">
