--- a/profile.html
+++ b/profile.html
@@ -6,9 +6,7 @@
     <title>Profil</title>
     <link rel="stylesheet" href="css/light/profile.css" type="text/css" id="theme">
     <link rel="icon" type="image/x-icon" href="output-onlinepngtools.png">
-    <script src="js/responsive.js"></script>
     <script src="javascript/themeChange.js"></script>
-    <script src="js/text-area.js"></script>
 </head>
 <body>
     <nav>
@@ -26,7 +24,6 @@
     <div class="main">
         <div class="profileInformation">
             <div class="segitseg">
-
                 <div class="userProfile">
                     <div class="backgroundImage">
                         <div class="insideProfilePicture">
@@ -53,7 +50,7 @@
                 </div>
                 
                 <div class="middleInformation">
-                    <span id="birthName">GWAGWAGWA</span>
+                    <span id="birthName">tesztnév</span>
                     <div class="userStatistics">
                         <img src="imgs/black/lightbulb.svg" alt="" class="theme-icon"><span>10</span>
                         <img src="imgs/black/person.svg" alt="" class="theme-icon"><span>10</span>
@@ -71,8 +68,8 @@
                         <div class="postPfp"></div>
                         <!-- Felhasználónév -->
                         <div class="postUsername">
-                            <span>@WhySoSerious</span>
-                            <span style="font-size: 15px;">oogabooga</span>
+                            <span>@teszt</span>
+                            <span style="font-size: 15px;">teszt</span>
                         </div>
                         <!-- More button ami "report"/"save" buttonokat tartalmazza -->
                         <span class="material-symbols-outlined more-icon" class="postOptions">
@@ -197,6 +194,5 @@
                 </div>
         </div>
     </div>
-    <script src="js/profileChange.js"></script>
 </body>
 </html>
