--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="./css/loginform.css">
     <title>Login</title>
     <link rel="shortcut icon" href="./output-onlinepngtools.png" type="image/x-icon">
+    <script src="js/password.js"></script>
+
 </head>
 <body>
     <nav>
@@ -22,13 +24,12 @@
             <span>Password</span>
             <div class="password-container">
                 <input type="password" id="password">
-                <button class="password-btn" type="button"><img src="Icons/visibility.svg" alt="Show Password Button"></button>
+                <button class="password-btn" type="button"><img src="imgs/black/more.svg" alt="Show Password Button" onclick="showPassword()"></button>
             </div>
             <input type="button" value="Login">
         </form>
 
         <span id="login"><a href="register.html">Don't have an account yet?</a></span>
-        <script src="js/password.js"></script>
     </div>
 </body>
 </html>
