--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/loginform.css">
     <title>Register</title>
     <link rel="shortcut icon" href="./output-onlinepngtools.png" type="image/x-icon">
+    <script src="js/password.js"></script>
 </head>
 <body>
     <nav>
@@ -22,11 +23,11 @@
             <span>Email</span>
             <input type="email" name="email" id="email">
             <span>Password</span>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password">
             <span>Confirm Password</span>
             <div class="password-container">
                 <input type="password" id="password" maxlength="20">
-                <button class="password-btn" type="button"><img src="Icons/visibility.svg" alt="Show Password Button"></button>
+                <button class="password-btn" type="button"><img src="imgs/black/more.svg" alt="Show Password Button" onclick="showPassword()"></button>
             </div>
             <input type="button" value="Register">
         </form>
