--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/loginform.css">
+    <link rel="stylesheet" href="./css/universal.css">
     <title>Register</title>
     <link rel="shortcut icon" href="./output-onlinepngtools.png" type="image/x-icon">
 </head>
