--- a/profile.html
+++ b/profile.html
@@ -83,8 +83,7 @@
             <div class="userDiv">
                 <div class="userProfile">
                     <div class="backgroundImage">
-                        <div class="insideProfilePicture">
-                        </div>
+                        <div class="insideProfilePicture"></div>
                     </div>
                     <div class="profilePicture"></div>
                     <div class="leftInformation">
@@ -103,11 +102,18 @@
                             <img src="imgs/black/comment.svg" alt="" class="theme-icon"><span>10</span>
                         </div>
                     </div>
-                    <hr id="largeScreenHr">
                 </div>
                 
+                <span id="birthName">GWAGWAGWA</span>
+
+                <div class="profileButtons">
+                    <button id="profileEdit">Edit profile</button>
+                    <button id="followButton">Follow</button>
+                </div>
+
+                <hr id="largeScreenHr">
+
                 <div class="middleInformation">
-                    <span id="birthName">GWAGWAGWA</span>
                     <div class="userStatistics">
                         <img src="imgs/black/lightbulb.svg" alt="" class="theme-icon"><span>10</span>
                         <img src="imgs/black/person.svg" alt="" class="theme-icon"><span>10</span>
@@ -138,14 +144,16 @@
                             <span class="time">20 hours ago</span>
                         </div>
                     </div>
+
                     <div class="postText">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nam illo minima, ut aut molestias quidem illum itaque? Aliquam repellendus inventore obcaecati nobis, odio deleniti itaque soluta distinctio dolores laboriosam?
                     </div>
+
+                    <!-- Információ a posztról -->
                     <div class="postInformation">
-                        <div class="editPost">
-                            <span>Edit post</span>
-                        </div>
+                        <button><span>Edit post</span></button>
                         <div class="likeInformation">
+                            
                             <!-- From Uiverse.io by Tsiangana --> 
                             <label class="ui-bookmark">
                                 <input type="checkbox" />
@@ -167,7 +175,6 @@
                             <span>648</span>
                         </div>
                     </div>
-
                     <button class="comments-toggle"><a href="comment.html">View Comments</a></button>
                 </div>
             </div>
