--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <span>Password</span>
             <div class="password-container">
                 <input type="password" id="password">
-                <button class="password-btn" type="button"><img src="Icons/visibility.svg" alt="Show Password Button"></button>
+                <button class="password-btn" type="button"><img src="imgs/black/visibility.svg" alt="Show Password Button"></button>
             </div>
             <input type="button" value="Login">
         </form>
