--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
             <span>Confirm Password</span>
             <div class="password-container">
                 <input type="password" id="password" maxlength="20">
-                <button class="password-btn" type="button"><img src="Icons/visibility.svg" alt="Show Password Button"></button>
+                <button class="password-btn" type="button"><img src="imgs/black/visibility.svg" alt="Show Password Button"></button>
             </div>
             <input type="button" value="Register">
         </form>
