--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/loginform.css">
+    <script src="javascript/password.js"></script>
     <title>Login</title>
     <link rel="shortcut icon" href="./output-onlinepngtools.png" type="image/x-icon">
 </head>
