--- a/comment.html
+++ b/comment.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <nav>
-        <div class="left-icons">
+        <div class="nav-icons">
             <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="imgs/black/home.svg" alt="Home icon" class="theme-icon"></span></a>
+            <a href="feed.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="imgs/black/feed.svg" alt="Person icon" class="theme-icon"></span></a>
             <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="imgs/black/person.svg" alt="Person icon" class="theme-icon"></span></a>
-            <h1 id="navSpan">EchoMap</h1>
             <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search" onclick="searchOpenBttn()"><img src="imgs/black/search.svg" alt="Search icon" class="theme-icon"></span></a>
             <span class="material-symbols-outlined" data-tooltip="Dark Mode" onclick="toggleTheme()">
                 <img src="imgs/black/theme.svg" alt="Theme Toggle" class="theme-icon">
