--- a/dashboard.html
+++ b/dashboard.html
@@ -17,23 +17,12 @@
             <a href="dashboard.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Home"><img src="imgs/black/home.svg" alt="Home icon" class="theme-icon"></span></a>
             <a href="feed.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="imgs/black/feed.svg" alt="Person icon" class="theme-icon"></span></a>
             <a href="profile.html" class="link-size"><span class="material-symbols-outlined" data-tooltip="Profile"><img src="imgs/black/person.svg" alt="Person icon" class="theme-icon"></span></a>
-            <a class="link-size searchIcon"><span class="material-symbols-outlined" data-tooltip="Search" onclick="searchOpenBttn()"><img src="imgs/black/search.svg" alt="Search icon" class="theme-icon"></span></a>
             <span class="material-symbols-outlined" data-tooltip="Dark Mode" onclick="toggleTheme()">
                 <img src="imgs/black/theme.svg" alt="Theme Toggle" class="theme-icon">
             </span>
             <span class="material-symbols-outlined" data-tooltip="Logout" class="link-size"><img src="imgs/black/logout.svg" alt="Logout icon" class="theme-icon"></span>
         </div>
-    </nav>
-
-    <div id="SearchDiv">
-        <div class="navSearchBar">
-            <input placeholder="Search..." class="input" name="text" type="text">
-            <button class="button">
-                <img src="imgs/black/search.svg" alt="Search" class="theme-icon">
-            </button>
-        </div> 
-    </div>  
-
+    </nav>  
     <div class="main">
             <div class="main-container">
                 <div class="userFeed">
@@ -84,6 +73,12 @@
                 </div>
                 <div class="posts">
                     <div class="mobileFeed">
+                        <div class="navSearchBar">
+                            <input placeholder="Search..." class="input" name="text" type="text">
+                            <button class="button">
+                                <img src="imgs/black/search.svg" alt="Search" class="theme-icon">
+                            </button>
+                        </div>
                         <ul>
                             <li>Follow someone</li>
                             <li>Post your first idea</li>
@@ -91,6 +86,7 @@
                             <li>Comment on an idea</li>
                             <li style="text-decoration: line-through;">Set a banner</li>
                         </ul>
+                        <span class="header">Top users</span>
                         <div class="feedDiv" id="recommendations">
                             <div class="user">
                                 <div class="feedPicture"></div>
