--- a/feed.html
+++ b/feed.html
@@ -84,6 +84,12 @@
                 </div>
                 <div class="posts">
                     <div class="mobileFeed">
+                        <div class="navSearchBar">
+                            <input placeholder="Search..." class="input" name="text" type="text">
+                            <button class="button">
+                                <img src="imgs/black/search.svg" alt="Search" class="theme-icon">
+                            </button>
+                        </div>
                         <ul>
                             <li>Follow someone</li>
                             <li>Post your first idea</li>
@@ -91,6 +97,7 @@
                             <li>Comment on an idea</li>
                             <li style="text-decoration: line-through;">Set a banner</li>
                         </ul>
+                        <span class="header">Top users</span>
                         <div class="feedDiv" id="recommendations">
                             <div class="user">
                                 <div class="feedPicture"></div>
